--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/alexey-ernest/nextjs#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^8.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
